foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simpleUnaryMinusIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 haHqReAYfeuvfYcWhfNLS3MI7c3ZRY7clLB4tnCP/GUhmg932p1m8pzaZ3ePnluo1tT/nb5Dzai3cVPxi89ZDA==
INPUT: {-42;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(-) [EMBRYONIC]
    Int(42) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(-42) [CONSTANT]
