foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simple_division.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 qXy9HtNpf8tCsL3R5Tlz/aqRrVHbYtxLcdUFmJOvXMGLgUlRARCagk8v5V0S9ygAm3K/+WeOhiAp4QuhwlhiAQ==
INPUT: {15 / 3;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(/) [EMBRYONIC]
    Int(15) [INDEPENDENT]
    Int(3) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(5) [CONSTANT]
