foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simple_identifier.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 mMTAzDsZRGEZ8Rutf9ysCjAO196UUSwQioEyunTjMMpY4c+4rO/HnCM+gPOjoo5QNP4lG5PX+CQxZCCJWAqhDQ==
INPUT: {x = 42; x;}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(42) [INDEPENDENT]
  Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(42) [INDEPENDENT]
  Int(42) [INDEPENDENT]
