foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simple_integer.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {5;}
[0] PARSED:
Brane [EMBRYONIC]
  Int(5) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(5) [INDEPENDENT]
