foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simple_multiplication.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 df43so2DzDHLHojWZQ7AF0/pb8ChHfwVkXxuuSt151XQzYY9RtO7/ygtenGJ+jhEulQcTpIDRfkTes6fHXaqBw==
INPUT: {6 * 7;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(*) [EMBRYONIC]
    Int(6) [INDEPENDENT]
    Int(7) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(42) [CONSTANT]
