foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simple_regex_search.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 WhU+/xiUoZhBnKvhnENLmJi9KAVjwMmV8FDCtOqwWZW4hpdcZVODB5DCOPzA77paYBh/jPN2FDOv2OQDBudtBw==
INPUT: {x = 5; result = {y = 1;}?y;}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(5) [INDEPENDENT]
  result = 
  Search(pattern='y', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(5) [INDEPENDENT]
  result = 
  Int(1) [INDEPENDENT]
