foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simple_subtraction.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {10 - 3;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(-) [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(3) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(7) [CONSTANT]
