foolish/foolish-core/src/snapshots/foolish_core__approval_tests__singleExpressionIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 yzPtHamfOi4UZGHeSBUmSrB90u5M5pWBvbEovWumM1X06KO9EICLwF8IjztxigmM9Qm4VhIfm6ROxKz19sNfCg==
INPUT: {((((5))));}
[0] PARSED:
Brane [EMBRYONIC]
  Int(5) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(5) [INDEPENDENT]
