foolish/foolish-core/src/snapshots/foolish_core__approval_tests__single_parenthesized_expression.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 zzvgWf7vhVX9wWbEq276sJ2nYlXI1fXLiNI/Kcho0/tYwecCzhmMucayxAo+yfy6rEK0Oe15Vs8ztZ+rOQP4Ag==
INPUT: {((((5))));}
[0] PARSED:
Brane [EMBRYONIC]
  Int(5) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(5) [INDEPENDENT]
